added main.css + changes

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <html>
     <head>
-
+        <link rel="stylesheet" type="text/css" href="main.css">
     </head>
     <body>
+        <header>
+            <h1>Marcucs Morck</h1>
+        </header>
         <nav>
-
+            <a href="#">About me</a>
+            <a href="#">Portfolio</a> 
+            <a href="#">CV</a> 
         </nav>    
     </body>
 </html>
