--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <html>
     <head>
+        <link href="https://fonts.googleapis.com/css?family=Work+Sans:700" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="main.css">
     </head>
     <body>
         <header>
-            <h1>Marcucs Morck</h1>
+            <div class="logo">
+                <a href="#"><h1>Marcus Morck</h1></a>
+            </div>
+            <nav class="main-nav">
+                <a href="#">About me</a>
+                <a href="#">Portfolio</a> 
+                <a href="#">CV</a>
+                <a href="#">Contact</a> 
+            </nav>    
         </header>
-        <nav>
-            <a href="#">About me</a>
-            <a href="#">Portfolio</a> 
-            <a href="#">CV</a> 
-        </nav>    
+
     </body>
 </html>
